--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.14",
     "ajv": "^6.12.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
